# HeXGButil

./: README.md  gen_so.py  pyproject.toml  run.sh  setup.py
.github/workflows/: build_wheels.yml
tests/: test_package.py
